[gd_scene load_steps=88 format=3 uid="uid://coj0wsgkpk8g6"]

[ext_resource type="Script" path="res://Scripts/PlayerChar.gd" id="1_28tex"]
[ext_resource type="Texture2D" uid="uid://djdw23j1gohwm" path="res://Sprites/PlayerDeath.png" id="2_6yf2e"]
[ext_resource type="Script" path="res://Scripts/StaminaBarIn.gd" id="2_wgpxs"]
[ext_resource type="PackedScene" uid="uid://4nxwx5yy6vfi" path="res://Scenes/main_menu.tscn" id="3_qyobv"]
[ext_resource type="PackedScene" uid="uid://dlxt8ivjf1r2" path="res://Scenes/game_over_menu.tscn" id="4_ynk8f"]
[ext_resource type="Texture2D" uid="uid://bqbqi83weok2w" path="res://Sprites/KidSheet/Pyjama attack down-Sheet.png" id="5_qjapa"]
[ext_resource type="Texture2D" uid="uid://bqks52t6cnt71" path="res://Sprites/KidSheet/Pyjama attack return-Sheet.png" id="6_82j5a"]
[ext_resource type="Texture2D" uid="uid://bo2vg0hs6gpen" path="res://Sprites/KidSheet/Pyjama hurt 2-Sheet.png" id="6_e7ddw"]
[ext_resource type="Texture2D" uid="uid://bi1avrbowrw00" path="res://Sprites/VikingLand.png" id="7_sxbuh"]
[ext_resource type="Texture2D" uid="uid://cai3smhhhsww8" path="res://Sprites/KidSheet/Pyjama idle-Sheet.png" id="8_6dfk6"]
[ext_resource type="Texture2D" uid="uid://db7tpg1qwo7sx" path="res://Sprites/KidSheet/Pyjama attack up saut-Sheet.png" id="9_ndt75"]
[ext_resource type="Texture2D" uid="uid://bdlf4tof367bt" path="res://Sprites/KidSheet/Pyjama walk-Sheet.png" id="11_jsicw"]
[ext_resource type="Script" path="res://Scripts/PlayerAnim.gd" id="12_57h43"]
[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="12_n5cjr"]
[ext_resource type="Texture2D" uid="uid://cuy11oa5rm2ub" path="res://Sprites/KidSheet/Pyjama sleep-Sheet.png" id="12_xu5xl"]
[ext_resource type="Script" path="res://Scripts/Hitbox.gd" id="14_yh77f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vj32y"]
size = Vector2(63, 114.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n3na"]
atlas = ExtResource("2_6yf2e")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap8e6"]
atlas = ExtResource("2_6yf2e")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd12x"]
atlas = ExtResource("2_6yf2e")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_120ek"]
atlas = ExtResource("2_6yf2e")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbwx8"]
atlas = ExtResource("2_6yf2e")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y78v"]
atlas = ExtResource("2_6yf2e")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w41b"]
atlas = ExtResource("2_6yf2e")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l68u7"]
atlas = ExtResource("2_6yf2e")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_563bw"]
atlas = ExtResource("2_6yf2e")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_200v7"]
atlas = ExtResource("2_6yf2e")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jphl"]
atlas = ExtResource("6_e7ddw")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vse71"]
atlas = ExtResource("6_e7ddw")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7wox"]
atlas = ExtResource("6_e7ddw")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtko4"]
atlas = ExtResource("6_e7ddw")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q3jo"]
atlas = ExtResource("8_6dfk6")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_flo1y"]
atlas = ExtResource("8_6dfk6")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qq6k"]
atlas = ExtResource("8_6dfk6")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbkuj"]
atlas = ExtResource("8_6dfk6")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhpdi"]
atlas = ExtResource("8_6dfk6")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl6yw"]
atlas = ExtResource("8_6dfk6")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qp48"]
atlas = ExtResource("8_6dfk6")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrxwn"]
atlas = ExtResource("8_6dfk6")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvbiy"]
atlas = ExtResource("8_6dfk6")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yqsa"]
atlas = ExtResource("9_ndt75")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_re4st"]
atlas = ExtResource("9_ndt75")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4mhi"]
atlas = ExtResource("9_ndt75")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewhy8"]
atlas = ExtResource("9_ndt75")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwvii"]
atlas = ExtResource("9_ndt75")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma6hu"]
atlas = ExtResource("7_sxbuh")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ycwd"]
atlas = ExtResource("7_sxbuh")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgmm5"]
atlas = ExtResource("7_sxbuh")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpoqd"]
atlas = ExtResource("7_sxbuh")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8xbl"]
atlas = ExtResource("7_sxbuh")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymfle"]
atlas = ExtResource("7_sxbuh")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2av5"]
atlas = ExtResource("11_jsicw")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_afoa8"]
atlas = ExtResource("11_jsicw")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8oj6"]
atlas = ExtResource("11_jsicw")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_h15cu"]
atlas = ExtResource("11_jsicw")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6aur"]
atlas = ExtResource("11_jsicw")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_btr7x"]
atlas = ExtResource("11_jsicw")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocviu"]
atlas = ExtResource("11_jsicw")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxlvo"]
atlas = ExtResource("11_jsicw")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_imelq"]
atlas = ExtResource("5_qjapa")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ona28"]
atlas = ExtResource("5_qjapa")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f352x"]
atlas = ExtResource("5_qjapa")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj4cu"]
atlas = ExtResource("5_qjapa")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_foo6v"]
atlas = ExtResource("5_qjapa")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qylih"]
atlas = ExtResource("5_qjapa")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqflv"]
atlas = ExtResource("12_xu5xl")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqlog"]
atlas = ExtResource("12_xu5xl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1wx6"]
atlas = ExtResource("12_xu5xl")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv0tl"]
atlas = ExtResource("12_xu5xl")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ixm8"]
atlas = ExtResource("12_xu5xl")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrbvn"]
atlas = ExtResource("12_xu5xl")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk6d0"]
atlas = ExtResource("12_xu5xl")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeinv"]
atlas = ExtResource("12_xu5xl")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2of24"]
atlas = ExtResource("12_xu5xl")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p31b"]
atlas = ExtResource("12_xu5xl")
region = Rect2(1800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xilx2"]
atlas = ExtResource("12_xu5xl")
region = Rect2(2000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_di7ca"]
atlas = ExtResource("12_xu5xl")
region = Rect2(2200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyhl4"]
atlas = ExtResource("6_82j5a")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd140"]
atlas = ExtResource("6_82j5a")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_aapwv"]
atlas = ExtResource("6_82j5a")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekfah"]
atlas = ExtResource("6_82j5a")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bi44"]
atlas = ExtResource("6_82j5a")
region = Rect2(800, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_mlcwx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n3na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap8e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd12x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_120ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbwx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y78v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w41b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l68u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_563bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_200v7")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jphl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vse71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7wox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtko4")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q3jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flo1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qq6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbkuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhpdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl6yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qp48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrxwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvbiy")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yqsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re4st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4mhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewhy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwvii")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma6hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ycwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgmm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpoqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8xbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymfle")
}],
"loop": false,
"name": &"Land",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2av5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afoa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8oj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h15cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6aur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btr7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocviu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxlvo")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imelq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ona28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f352x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj4cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foo6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qylih")
}],
"loop": false,
"name": &"Slash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqflv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqlog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1wx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv0tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ixm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrbvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk6d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeinv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2of24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p31b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xilx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di7ca")
}],
"loop": true,
"name": &"Sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyhl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd140")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aapwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekfah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bi44")
}],
"loop": false,
"name": &"TurnAttack",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox67b"]
size = Vector2(64, 115)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k67rw"]
size = Vector2(47, 131)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfd4k"]
size = Vector2(91.5, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2eew"]
size = Vector2(203, 58)

[node name="PlayerCharacter" type="CharacterBody2D"]
collision_layer = 0
floor_constant_speed = true
floor_max_angle = 1.39626
script = ExtResource("1_28tex")

[node name="PlayerCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.25)
shape = SubResource("RectangleShape2D_vj32y")

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1
editor_draw_drag_margin = true

[node name="StaminaBarOut" type="ColorRect" parent="Camera2D"]
z_index = 1
offset_left = -50.0
offset_top = -105.0
offset_right = 50.0
offset_bottom = -80.0
color = Color(0, 0, 0, 1)

[node name="StaminaBarIn" type="ColorRect" parent="Camera2D/StaminaBarOut"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 20.0
color = Color(1, 1, 0, 1)
script = ExtResource("2_wgpxs")

[node name="MainMenu" parent="Camera2D" instance=ExtResource("3_qyobv")]
visible = false

[node name="DeathMenu" parent="Camera2D" instance=ExtResource("4_ynk8f")]
visible = false

[node name="WinMenu" parent="Camera2D" instance=ExtResource("4_ynk8f")]
visible = false

[node name="Label" parent="Camera2D/WinMenu/Control" index="3"]
text = "You Won!!"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("playerChar")]
z_index = 1
sprite_frames = SubResource("SpriteFrames_mlcwx")
animation = &"Hurt"
script = ExtResource("12_57h43")
playerChar = NodePath("..")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 10
script = ExtResource("12_n5cjr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_ox67b")

[node name="JumpHit" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("14_yh77f")

[node name="JumpHitShape" type="CollisionShape2D" parent="JumpHit"]
position = Vector2(56.5, -25.5)
shape = SubResource("RectangleShape2D_k67rw")

[node name="SlashHit" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("14_yh77f")

[node name="SlashHitShape" type="CollisionShape2D" parent="SlashHit"]
position = Vector2(44.25, -9.5)
shape = SubResource("RectangleShape2D_lfd4k")

[node name="StabHit" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("14_yh77f")

[node name="StabHitShape" type="CollisionShape2D" parent="StabHit"]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_a2eew")

[connection signal="OnStaminaChanged" from="." to="Camera2D/StaminaBarOut/StaminaBarIn" method="_on_player_character_on_stamina_changed"]
[connection signal="StateChanged" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_state_changed"]
[connection signal="StateEnded" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_state_ended"]
[connection signal="StateLooped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_state_looped"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_looped"]

[editable path="Camera2D/WinMenu"]
